--- a/release/website/index.html
+++ b/release/website/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>智能排班</title>
-  <link href="style.02842915bd80be8b8923.css" rel="stylesheet"></head>
+  </head>
   <body>
-  <div id="app"></div><script type="text/javascript" src="index.02842915bd80be8b8923.js"></script></body>
+  <div id="app"></div><script type="text/javascript" src="index.63fb01251908af7245a5.js"></script></body>
 </html>
