图标更新,tablelist实际预计图标显示

--- a/public/iconfont/demo_symbol.html
+++ b/public/iconfont/demo_symbol.html
@@ -299,6 +299,14 @@
                     <div class="fontclass">#icon-pianlishangbao1</div>
                 </li>
             
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-jiantou3"></use>
+                    </svg>
+                    <div class="name">箭头</div>
+                    <div class="fontclass">#icon-jiantou3</div>
+                </li>
+            
         </ul>
 
 
