--- a/public/iconfont/demo_fontclass.html
+++ b/public/iconfont/demo_fontclass.html
@@ -216,6 +216,12 @@
                     <div class="fontclass">.icon-pianlishangbao1</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont icon-jiantou3"></i>
+                    <div class="name">箭头</div>
+                    <div class="fontclass">.icon-jiantou3</div>
+                </li>
+            
         </ul>
 
         <h2 id="font-class-">font-class引用</h2>
