--- a/public/iconfont/demo_unicode.html
+++ b/public/iconfont/demo_unicode.html
@@ -236,6 +236,12 @@
                     <div class="code">&amp;#xe6ba;</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont">&#xe6bb;</i>
+                    <div class="name">箭头</div>
+                    <div class="code">&amp;#xe6bb;</div>
+                </li>
+            
         </ul>
         <h2 id="unicode-">unicode引用</h2>
         <hr>
