--- a/public/iconfont/demo_fontclass.html
+++ b/public/iconfont/demo_fontclass.html
@@ -175,6 +175,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-tuichu"></i>
+                    <div class="name">退出</div>
+                    <div class="fontclass">.icon-tuichu</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-yonghu"></i>
                     <div class="name">用户</div>
                     <div class="fontclass">.icon-yonghu</div>
