--- a/public/iconfont/demo_symbol.html
+++ b/public/iconfont/demo_symbol.html
@@ -245,6 +245,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-tuichu"></use>
+                    </svg>
+                    <div class="name">退出</div>
+                    <div class="fontclass">#icon-tuichu</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-yonghu"></use>
                     </svg>
                     <div class="name">用户</div>
