--- a/public/iconfont/demo_unicode.html
+++ b/public/iconfont/demo_unicode.html
@@ -195,6 +195,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe63c;</i>
+                    <div class="name">退出</div>
+                    <div class="code">&amp;#xe63c;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe665;</i>
                     <div class="name">用户</div>
                     <div class="code">&amp;#xe665;</div>
