导航栏图标添加

--- a/public/iconfont/demo_fontclass.html
+++ b/public/iconfont/demo_fontclass.html
@@ -181,6 +181,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-logo"></i>
+                    <div class="name">双流机场logo</div>
+                    <div class="fontclass">.icon-logo</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-yonghu"></i>
                     <div class="name">用户</div>
                     <div class="fontclass">.icon-yonghu</div>
