--- a/public/iconfont/demo_unicode.html
+++ b/public/iconfont/demo_unicode.html
@@ -201,6 +201,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe63f;</i>
+                    <div class="name">双流机场logo</div>
+                    <div class="code">&amp;#xe63f;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe665;</i>
                     <div class="name">用户</div>
                     <div class="code">&amp;#xe665;</div>
