--- a/public/iconfont/demo_symbol.html
+++ b/public/iconfont/demo_symbol.html
@@ -253,6 +253,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-logo"></use>
+                    </svg>
+                    <div class="name">双流机场logo</div>
+                    <div class="fontclass">#icon-logo</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-yonghu"></use>
                     </svg>
                     <div class="name">用户</div>
