更新图标库，添加编辑图标

--- a/public/iconfont/demo_unicode.html
+++ b/public/iconfont/demo_unicode.html
@@ -207,6 +207,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe64d;</i>
+                    <div class="name">编辑</div>
+                    <div class="code">&amp;#xe64d;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe665;</i>
                     <div class="name">用户</div>
                     <div class="code">&amp;#xe665;</div>
