--- a/public/iconfont/demo_fontclass.html
+++ b/public/iconfont/demo_fontclass.html
@@ -187,6 +187,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-bianji"></i>
+                    <div class="name">编辑</div>
+                    <div class="fontclass">.icon-bianji</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-yonghu"></i>
                     <div class="name">用户</div>
                     <div class="fontclass">.icon-yonghu</div>
